--- a/core-papers/gameover.html
+++ b/core-papers/gameover.html
@@ -9,7 +9,7 @@
 <body style=" background-color:yellow;">
     <div class="final-page">
         <div class="lost">
-            <img src="images/lost.gif" alt="lost_gif">
+            <img src="./../images/lost.gif" alt="lost_gif">
             <h2><b>Game Over!</b></h2>
             <p>The correct word is: <b>Adventure</b></p>
             <button class="play-again"><b>Play Again</b></button>
