--- a/core-papers/index.html
+++ b/core-papers/index.html
@@ -10,7 +10,7 @@
      
     <div class="container">
         <div class="merchant-box">
-            <img src="./images/hangman-0.svg"alt="merchant-1">
+            <img src="./../images/hangman-0.svg"alt="merchant-1">
             <h1>Guess or Die</h1>
         </div>
         <div class="Game-box">
