--- a/core-papers/index.html
+++ b/core-papers/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body style=" background-color:purple;">
-     
+     <!-- <div class="content">
+        <img src="./../images/hangman-1.svg" alt="merchant-2" class="one">
+        <img src="./../images/hangman-2.svg" alt="merchant-3" class="two">
+        <img src="./../images/hangman-3.svg" alt="merchant-4" class="three">
+        <img src="./../images/hangman-4.svg" alt="merchant-5" class="four">
+        <img src="./../images/hangman-5.svg" alt="merchant-6" class="five">
+        <img src="./../images/hangman-6.svg" alt="merchant-7" class="six"> -->
+     </div>
     <div class="container">
         <div class="merchant-box">
             <img src="./../images/hangman-0.svg"alt="merchant-1">
