--- a/core-papers/index.html
+++ b/core-papers/index.html
@@ -6,6 +6,7 @@
     <title>Guess or Die</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="word-list.js" defer></script>
 </head>
 <body style=" background-color:purple;">
      <!-- <div class="content">
@@ -23,13 +24,6 @@
         </div>
         <div class="Game-box">
             <ul class="word-display">
-                <li class="letter"><b></b></li>
-                <li class="letter"><b></b></li>
-                <li class="letter_guessed"><b>a</b></li>
-                <li class="letter"><b></b></li>
-                <li class="letter"><b></b></li>
-                <li class="letter"><b></b></li>
-                <li class="letter"><b></b></li>
             </ul>
             <h4 class="hint-text">
                 Hint:
@@ -40,7 +34,7 @@
                 <b>0 / 6</b>
             </h4>
             <div class="Keyboard">
-                <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button><button>f</button><button>g</button><button>h</button><button>i</button><button>j</button><button>k</button><button>l</button><button>m</button><button>n</button><button>o</button><button>p</button><button>q</button><button>r</button><button>s</button><button>t</button><button>u</button><button>v</button><button>w</button><button>x</button><button>y</button><button>z</button>
+                <!-- <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button><button>f</button><button>g</button><button>h</button><button>i</button><button>j</button><button>k</button><button>l</button><button>m</button><button>n</button><button>o</button><button>p</button><button>q</button><button>r</button><button>s</button><button>t</button><button>u</button><button>v</button><button>w</button><button>x</button><button>y</button><button>z</button> -->
             </div>
         </div>
     </div>
