--- a/core-papers/story_line_page2.html
+++ b/core-papers/story_line_page2.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: yellow;">
+<div class="alignment-0">
     <div class="alignment-2">
             <b>So, what you are supposed to do is answer the questions correctly and save the merchant, you are the only one there to help that merchant. Don't fail to rescue the merchant; his life is hanging by a thread. Thank you.</b>
         </div>
+    <div class="alignment-3">
         <button class="let-start"><b>Let's Play</b></button>
+    </div>
+</div>
 </body>
 </html>
