--- a/core-papers/story_line_page.html
+++ b/core-papers/story_line_page.html
@@ -16,4 +16,11 @@
     </div>
 </div>
     </body>
+    <script>
+        const Right_arrow = document.getElementsByClassName("right-arrow")[0]; 
+
+        Right_arrow.addEventListener("click", () => {
+            window.location.href = "story_line_page2.html";
+        });
+    </script>
 </html>
