--- a/core-papers/story_line_page2.html
+++ b/core-papers/story_line_page2.html
@@ -16,4 +16,11 @@
     </div>
 </div>
 </body>
+<script>
+    const let_play = document.getElementsByClassName("let-start")[0]; 
+
+        let_play.addEventListener("click", () => {
+            window.location.href = "index.html";
+        });
+</script>
 </html>
