--- a/core-papers/starting.html
+++ b/core-papers/starting.html
@@ -9,7 +9,7 @@
 <body style="background-color: purple;">
     <div class="front-page">
         <img src="./../images/Guess or Die.png">
-        <button class="go"></button>
+        <button class="go">Go</button> 
     </div>
 </body>
 <script>
