--- a/core-papers/story_line_page2.html
+++ b/core-papers/story_line_page2.html
@@ -20,7 +20,7 @@
     const let_play = document.getElementsByClassName("let-start")[0]; 
 
         let_play.addEventListener("click", () => {
-            window.location.href = "index.html";
+            window.location.href = "category.html";
         });
 </script>
 </html>
