--- a/core-papers/gameover.html
+++ b/core-papers/gameover.html
@@ -20,12 +20,12 @@
 <script>
     const play_again = document.querySelector(".play-again");
     play_again.addEventListener("click", ()=> {
-        window.location.href="index.html";
+        window.location.href="Difficult_index.html";
     })
-    const finish = new Audio('./Audio Folder/Fail to answer.wav')
-    finish.play()
-    console.log("audio", finish)
-    let word = localStorage.getItem("word");
-    document.querySelector('.answer').textContent = word
+    // const finish = new Audio('./Audio Folder/Fail to answer.wav')
+    // finish.play()
+    // console.log("audio", finish)
+    // let word = localStorage.getItem("word");
+    // document.querySelector('.answer').textContent = word
 </script>
 </html>
