--- a/core-papers/gameover.html
+++ b/core-papers/gameover.html
@@ -22,10 +22,7 @@
     play_again.addEventListener("click", ()=> {
         window.location.href="Difficult_index.html";
     })
-    // const finish = new Audio('./Audio Folder/Fail to answer.wav')
-    // finish.play()
-    // console.log("audio", finish)
-    // let word = localStorage.getItem("word");
-    // document.querySelector('.answer').textContent = word
+    let word = localStorage.getItem("word");
+    document.querySelector('.answer').textContent = word
 </script>
 </html>
