--- a/core-papers/category.html
+++ b/core-papers/category.html
@@ -16,15 +16,15 @@
 <script>
     const Easy_index = document.querySelector(".play-again1");
     Easy_index.addEventListener("click", function() {
-        window.location.href = "Easy_index.html";
+        window.location.href = "./../Easy_index.html";
     });
     const Medium_index = document.querySelector(".play-again2");
     Medium_index.addEventListener("click", function() {
-        window.location.href = "Medium_index.html";
+        window.location.href = "./../Medium_index.html";
     });
     const Difficult_index = document.querySelector(".play-again3");
     Difficult_index.addEventListener("click", function() {
-        window.location.href = "Difficult_index.html";
+        window.location.href = "./../Difficult_index.html";
     });
 </script>
 </html>
