--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     const start = document.getElementsByClassName("go")[0];
 
     start.addEventListener("click", () => {
-        window.location.href = "story_line_page.html";
+        window.location.href = "./../story_line_page.html";
     });
 </script>
 </html>
