--- a/Medium_index.html
+++ b/Medium_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess or Die</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="./Medium.js" defer></script>
 </head>
 <body style=" background-color:purple;">
