--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess or Die</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body style="background-color: purple;">
     <div class="front-page">
@@ -16,7 +16,7 @@
     const start = document.getElementsByClassName("go")[0];
 
     start.addEventListener("click", () => {
-        window.location.href = "./../story_line_page.html";
+        window.location.href = "./story_line_page.html";
     });
 </script>
 </html>
