--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: purple;">
     <div class="front-page">
-        <img src="./../images/Guess or Die.png">
+        <img src="./images/Guess or Die.png">
         <button class="go">Go</button> 
     </div>
 </body>
